tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_false_departspeed/errors.duarouter
Error: Invalid departSpeed definition for vehicle '1';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
